# 3D-Nav-Dynamic-EGO

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/collision_engine/include/nav3d/collision/: inflation_layer.h  sphere_checker.h  trajectory_checker.h  trajectory_feasibility_checker.h
core/collision_engine/src/: inflation_layer.cpp  sphere_checker.cpp  trajectory_checker.cpp  trajectory_feasibility_checker.cpp
core/common/include/nav3d/common/: result.h  types.h
core/controller_core/include/nav3d/controller/: motion_model.h  safety_monitor.h  trajectory_tracker.h
core/controller_core/src/: motion_model.cpp  safety_monitor.cpp  trajectory_tracker.cpp
core/map_core/include/nav3d/map/: i_map.h  local_grid.h  map_2d_projection.h  map_builder.h  map_composite.h  octomap_manager.h  pcd_loader.h  point_cloud_preprocessor.h  voxel_grid_map.h
core/map_core/src/: local_grid.cpp  map_2d_projection.cpp  map_builder.cpp  map_composite.cpp  octomap_manager.cpp  pcd_loader.cpp  point_cloud_preprocessor.cpp  voxel_grid_map.cpp
core/planner_core/include/nav3d/planner/: ego_planner_core.h  i_path_searcher.h  replan_fsm.h
core/planner_core/include/nav3d/planner/bspline/: bspline_optimizer.h  uniform_bspline.h
core/planner_core/include/nav3d/planner/path_searching/: astar_3d.h  jps_3d.h
core/planner_core/src/: ego_planner_core.cpp  replan_fsm.cpp
core/planner_core/src/bspline/: bspline_optimizer.cpp  uniform_bspline.cpp
core/planner_core/src/path_searching/: astar_3d.cpp  jps_3d.cpp
core/tests/: test_astar_3d.cpp  test_bspline_optimizer.cpp  test_ego_planner_core.cpp  test_inflation_layer.cpp  test_jps_3d.cpp  test_local_grid.cpp  test_map_2d_projection.cpp  test_map_builder.cpp  test_map_composite.cpp  test_motion_model.cpp  test_octomap_manager.cpp  test_pcd_loader.cpp  test_planning_scenario_matrix.cpp  test_point_cloud_preprocessor.cpp  test_replan_fsm.cpp  test_safety_monitor.cpp  test_sphere_checker.cpp  test_trajectory_checker.cpp  test_trajectory_feasibility_checker.cpp  test_trajectory_tracker.cpp  test_uniform_bspline.cpp  test_voxel_grid_map.cpp
ros2_bridge/nav3d_ros2_bridge/: CMakeLists.txt  package.xml
ros2_bridge/nav3d_ros2_bridge/config/: nav3d_bridge.yaml
ros2_bridge/nav3d_ros2_bridge/environment/: nav3d_octomap_msgs_library_path.dsv.in  nav3d_octomap_msgs_library_path.sh.in
ros2_bridge/nav3d_ros2_bridge/launch/: nav3d_bridge.launch.py  nav3d_local_replan_smoke.launch.py
ros2_bridge/nav3d_ros2_bridge/rviz/: nav3d.rviz
ros2_bridge/nav3d_ros2_bridge/scripts/: nav3d_cmd_vel_pose_sim.py  nav3d_local_replan_smoke.py  nav3d_local_replan_smoke_lib.py
ros2_bridge/nav3d_ros2_bridge/src/: nav3d_bridge_node.cpp
ros2_bridge/nav3d_ros2_bridge/test/: test_nav3d_local_replan_smoke_lib.py
tools/: CMakeLists.txt  check_octomap_trajectory_demo_plot.cmake  check_octomap_trajectory_ground_plot.cmake  check_plan_status_contract.cmake  check_ros2_bridge_contract.cmake  octomap_trajectory_demo.cpp  pcl_pcd_loader.cpp  pcl_pcd_loader.h  standalone_demo.cpp  test_pcl_pcd_loader.cpp
tools/testdata/: demo_filter_map.pcd  frame_x_ray.pcd  frame_y_ray.pcd  mock_corridor_map.pcd  mock_stairs_map.pcd  multiframe_manifest.txt
web_ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web_ui/e2e/: navigation.spec.ts  v36-deep-verify.spec.ts  v38-screenshot.spec.ts
web_ui/src/: App.tsx  bridgeSupervisor.test.ts  bridgeSupervisor.ts  main.tsx  styles.css
web_ui/src/components/: GoalManager.tsx  MiniMap.tsx  NavigationScene.tsx
web_ui/src/rosbridge/: client.test.ts  client.ts
web_ui/src/utils/: bounds.ts  mapSource.test.ts  mapSource.ts  palette.ts  progress.test.ts  progress.ts  segments.test.ts  trajectory.test.ts  trajectory.ts
